--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <meta property="og:title" content="The Flicker — In Memory of Tony Conrad" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="" />
+  <meta property="og:image" content="http://www.flicker.website/media/screenshot1.jpg" />
   <meta property="og:description" content="A tribute recreation of Tony Conrad: The Flicker" />
   <meta property="og:url" content="http://www.flicker.website/" />
 
@@ -23,7 +23,7 @@
   <meta name="twitter:creator" content="@LIMP__BISCUIT" />
 </head>
 <body>
-  <div class="film-title">Tony Conrad: The Flicker</div>
+  <div class="film-title">In Memory of Tony Conrad: The Flicker</div>
 
   <div class="mute-button transparent">Mute</div>
 
