more context in introductory note

--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
   <meta name="twitter:creator" content="@LIMP__BISCUIT" />
 </head>
 <body>
-  <div class="film-title">In Memory of Tony Conrad: The Flicker</div>
+  <div class="work-note-wrapper">
+    <div class="work-note">
+      <a href="https://en.wikipedia.org/wiki/Tony_Conrad" target="_blank">Tony Conrad</a> (1940 - 2016)
+      was an experimental artist and musician. This website pays tribute to his work and memory by recreating
+      his landmark structural film, <em>The Flicker</em>.
+    </div>
+  </div>
 
   <div class="mute-button transparent">Mute</div>
 
