--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="work-note-wrapper">
     <div class="work-note">
       <a href="https://en.wikipedia.org/wiki/Tony_Conrad" target="_blank">Tony Conrad</a> (1940 - 2016)
-      was an experimental artist and musician. This website pays tribute to his work and memory by recreating
+      was a pioneering experimental artist and musician. This website pays tribute to his work and memory by recreating
       his landmark structural film, <em>The Flicker</em>.
     </div>
   </div>
